Working on View Phone

--- a/tech/devicedash/templates/devicedash/find.html
+++ b/tech/devicedash/templates/devicedash/find.html
@@ -35,6 +35,13 @@
                         <input type="button" value="View Phone" class="btn btn-danger viewphone mt-auto" data-id="{{ phone.phone_id }}">
                     </div>
                 </li>
+                <div id="viewphone" style="display: none;">
+                    {{ phone.image }}
+                    {{ phone.name }}
+                    {{ phone.quick_spec }}
+                    {{ phone.popularity }}
+                    {{ phone.price }}
+                </div>
             {% endfor %}
         </ul>
         <input type="button" onclick="next()" value="Next" class="prev-next" id="nextbutton">
@@ -43,7 +50,6 @@
         {% endif %}
     </div>
 </div>
-<div id="viewphone" style="display: none;"></div>
 </div>
 <script>
 
