--- a/tech/devicedash/static/devicedash/styles.css
+++ b/tech/devicedash/static/devicedash/styles.css
@@ -5,7 +5,6 @@ body {
     background-color: #22092C!important;
     background-image: url('tech-bg.png');
     background-size: cover;
-    background-position: cover;
 }
 
 nav {
@@ -76,6 +75,11 @@ nav {
 
 .card-text {
     font-size: 15px;
+}
+
+#viewphone {
+    z-index: 4;
+    background-color: aquamarine;
 }
 
 /* .qs {
