--- a/tech/devicedash/templates/devicedash/layout.html
+++ b/tech/devicedash/templates/devicedash/layout.html
@@ -7,6 +7,8 @@
         <link href="{% static 'devicedash/styles.css' %}" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="icon" type="image/x-icon" href="{% static 'devicedash/favicon.jpg' %}">
+        {% block style %}
+        {% endblock %}
         {% block script %}
         {% endblock %}
     </head>
