--- a/tech/devicedash/templates/devicedash/layout.html
+++ b/tech/devicedash/templates/devicedash/layout.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse d-flex align-items-center" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" href="">Home</a>
+                  <a class="nav-link active" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#">Starred</a>
