--- a/tech/devicedash/static/devicedash/styles.css
+++ b/tech/devicedash/static/devicedash/styles.css
@@ -21,6 +21,7 @@ nav {
 }
 .search-form input[type="submit"] {
     background-color: #F05941!important;
+    height: 40px;
     color: white!important;
 }
 
@@ -84,6 +85,43 @@ nav {
 #viewphone {
     z-index: 4;
     background-color: aquamarine;
+}
+
+.default-buttons {
+    width: 100%;
+}
+.default-buttons button {
+    width: 32%;
+    margin-top: 3px;
+    height: 54px;
+}
+
+.defaultPrice:hover {
+    background-color: #22092C!important;
+    color: white!important;
+}
+
+.main-heading {
+    width: 100%;
+    padding: 0%;
+    margin:0%;    
+    padding: 0%
+}
+.main-left {
+    /* float: left; */
+    margin-right: 25%;
+}
+.main-right {
+    margin:10px;
+    margin-left: 30%;
+    font-size: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* float: right; */
+}
+.description {
+    text-align: center;
+    font-size: larger;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* .qs {
