--- a/tech/devicedash/templates/devicedash/layout.html
+++ b/tech/devicedash/templates/devicedash/layout.html
@@ -26,10 +26,7 @@
                   <a class="nav-link active" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Starred</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Nothing</a>
+                  <a class="nav-link active" href="#">Admin</a>
                 </li>
               </ul>
             </div>
