--- a/tech/devicedash/templates/devicedash/layout.html
+++ b/tech/devicedash/templates/devicedash/layout.html
@@ -25,9 +25,15 @@
                 <li class="nav-item">
                   <a class="nav-link active" href="{% url 'index' %}">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Admin</a>
-                </li>
+                {% if user.is_authenticated %}
+                  <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'logout_view' %}">Logout</a>
+                  </li>
+                {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'admin' %}">Admin</a>
+                  </li>
+                {% endif %}
               </ul>
             </div>
           </nav>
