--- a/tech/devicedash/templates/devicedash/layout.html
+++ b/tech/devicedash/templates/devicedash/layout.html
@@ -27,7 +27,7 @@
                 </li>
                 {% if user.is_authenticated %}
                   <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'logout_view' %}">Logout</a>
+                    <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
                   </li>
                 {% else %}
                   <li class="nav-item">
