--- a/tech/devicedash/templates/devicedash/layout.html
+++ b/tech/devicedash/templates/devicedash/layout.html
@@ -29,6 +29,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'add' %}">Add Phone</a>
+                  </li>
                 {% else %}
                   <li class="nav-item">
                     <a class="nav-link active" href="{% url 'admin' %}">Admin</a>
