--- a/tech/devicedash/static/devicedash/styles.css
+++ b/tech/devicedash/static/devicedash/styles.css
@@ -13,7 +13,10 @@ nav {
 }
 .nav-item {
     text-align: center;
-    width: 120px;
+    width: 100px;
+}
+.disabled {
+    color: rgba(255, 255, 255, 0.6)!important;
 }
 
 .nav-item:hover {
@@ -178,9 +181,28 @@ nav {
 .confirmation {
     background-color: #4158D0;
 }
+/* 
+.all-phone-ul {
+    display: flex;
+} */
 
+.all-phone-li {
+    display: inline-block;
+    margin: 3px;
+    padding: 5px;
+    border: 1px solid rgb(0, 153, 255);
+    color:rgb(0, 153, 255);
+    background-color: rgba(255, 255, 255, 0.9);
+}   
 
-
+.pagination {
+    display: flex;
+    justify-content: center;
+    text-align: center!important;
+}
+.pagination a {
+    display: inline;
+}
 
 
 /* light: F05941, BE3144, 872341, 22092C: dark */
