--- a/tech/devicedash/templates/devicedash/layout.html
+++ b/tech/devicedash/templates/devicedash/layout.html
@@ -5,6 +5,7 @@
         <title>{% block title %}DeviceDash{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="{% static 'devicedash/styles.css' %}" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/4940d95365.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="icon" type="image/x-icon" href="{% static 'devicedash/favicon.jpg' %}">
         {% block style %}
@@ -32,9 +33,15 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-
+            
             <div class="collapse navbar-collapse d-flex align-items-center" id="navbarSupportedContent">
+              
+              
               <ul class="navbar-nav ml-auto">
+                <form class="form-inline my-2 my-lg-0 ml-auto searchbar" method="" action="">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search Phone" aria-label="Search">
+                  <button class="btn my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+                </form>
                 <li class="nav-item">
                   <a class="nav-link active" href="{% url 'index' %}">Home</a>
                 </li>
