--- a/tech/devicedash/static/devicedash/styles.css
+++ b/tech/devicedash/static/devicedash/styles.css
@@ -47,6 +47,7 @@ nav {
 
 .card {
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    border-radius: 10px!important;
 }
 
 .cards {
@@ -78,9 +79,12 @@ nav {
     cursor: pointer;
     width: 100px;
     height: 100px;
+    border-radius: 10px;
 }
 .prev-next:hover {
     background: #111;
+    border-radius: 10px;
+    background-image: linear-gradient(43deg, #F05941 0%, #872341 46%, #22092C 100%)!important;
 }
 #nextbutton {
     margin-left: 40px;
@@ -244,7 +248,17 @@ nav {
     justify-content: center;
 }
 
-
+.find-link {
+    color: black;
+    text-decoration: none;
+}
+.find-link:hover {
+    color: white;
+    text-decoration: none;
+}
+.card:hover {
+    background-image: linear-gradient(43deg, #F05941 0%, #872341 46%, #22092C 100%)!important;
+}
 
 
 
